--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: marsblog
-subtitle: Large cuppa Java in my hand, Devops shizzle is my bizzle.
+subtitle: Large cuppa Java in my hand, Devops shizzle is my bizzle. ECM? Easy, 'em.
 ---
 
 <div class="posts-list">
