--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: marsblog
-subtitle: Cuppa Java in my hand, Devops shizzle is my bizzle. ECM? Easy, 'em.
+subtitle: Java, Alfresco, Devops <whispers>call me!</whispers>
 ---
 
 <div class="posts-list">
