--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: marsblog
-subtitle: Java, Alfresco, Devops <whispers>call me!</whispers>
+subtitle: Java, Alfresco, Devops
 ---
 
 <div class="posts-list">
